--- a/messenger-frontend/public/index.html
+++ b/messenger-frontend/public/index.html
@@ -29,12 +29,20 @@
     </header>
 
     <div class="container">
-      <!--<nav class="side-menu">menu-->
-        <!--<a href="#">Chat</a>-->
-        <!--<a href="#">Chat</a>-->
-      <!--</nav>-->
+      <nav class="side-menu">
+        menu
+        <a class="side-menu-elem" href="#">Chat</a>
+        <a class="side-menu-elem" href="#">Chat</a>
+      </nav>
       <main>
-        <h1>main</h1>
+        <div class="message">
+          <div class="message-username"> User </div>
+          <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
+        </div>
+        <div class="message">
+          <div class="message-username"> User </div>
+          <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
+        </div>
         <div class="message">
           <div class="message-username"> User </div>
           <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
