Some progress: signin, signup, reading conversations and messages

--- a/messenger-frontend/public/index.html
+++ b/messenger-frontend/public/index.html
@@ -17,66 +17,70 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <header>
-      <div class="logo">My Software Company Inc.</div>
-      <nav class="main-menu">
-        <a href="#">Products</a>
-        <a href="#">Solutions</a>
-        <a href="#">Management</a>
-        <a href="#">Career</a>
-        <a href="#">Contacts</a>
-      </nav>
-    </header>
-
-    <div class="container">
-      <nav class="side-menu">
-        menu
-        <a class="side-menu-elem" href="#">Chat</a>
-        <a class="side-menu-elem" href="#">Chat</a>
-      </nav>
-      <main>
-        <div class="message">
-          <div class="message-username"> User </div>
-          <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
-        </div>
-        <div class="message">
-          <div class="message-username"> User </div>
-          <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
-        </div>
-        <div class="message">
-          <div class="message-username"> User </div>
-          <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
-        </div>
-        <div class="message">
-          <div class="message-username"> User </div>
-          <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
-        </div>
-        <div class="message">
-          <div class="message-username"> User </div>
-          <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
-        </div>
-        <div class="message">
-          <div class="message-username"> User </div>
-          <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
-        </div>
-        <div class="message">
-          <div class="message-username"> User </div>
-          <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>
-        </div>
-        <!--<div style="display: flex; margin: 3em;">-->
-          <!--<form>-->
-              <!--<input type="text" />-->
-          <!--</form>-->
-        <!--</div>-->
-      </main>
-      <aside>aside</aside>
-    </div>
-
-    <footer>
-      footer
-    </footer>
+    <div id="root"></div>
 
   </body>
 </html>
 
 
+<!--<header>-->
+  <!--<div class="logo">My Wonderful Messenger</div>-->
+  <!--<nav class="main-menu">-->
+    <!--<div class="side-menu-elem">-->
+      <!--<form id="register_form">-->
+        <!--<input type="text" id="username"/>-->
+        <!--<input type="password" id="password"/>-->
+        <!--<a class="side-menu-elem" href="#">Log In</a>-->
+        <!--<a class="side-menu-elem" href="#">Sign Up</a>-->
+      <!--</form>-->
+    <!--</div>-->
+  <!--</nav>-->
+<!--</header>-->
+
+<!--<div class="container">-->
+  <!--<nav class="side-menu">-->
+    <!--menu-->
+    <!--<a class="side-menu-elem" href="#" onclick="alert('lol');">Chat</a>-->
+    <!--<a class="side-menu-elem" href="#">Chat</a>-->
+  <!--</nav>-->
+  <!--<main>-->
+    <!--<div class="message">-->
+      <!--<div class="message-username"> User </div>-->
+      <!--<div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>-->
+    <!--</div>-->
+    <!--<div class="message">-->
+      <!--<div class="message-username"> User </div>-->
+      <!--<div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>-->
+    <!--</div>-->
+    <!--<div class="message">-->
+      <!--<div class="message-username"> User </div>-->
+      <!--<div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>-->
+    <!--</div>-->
+    <!--<div class="message">-->
+      <!--<div class="message-username"> User </div>-->
+      <!--<div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>-->
+    <!--</div>-->
+    <!--<div class="message">-->
+      <!--<div class="message-username"> User </div>-->
+      <!--<div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>-->
+    <!--</div>-->
+    <!--<div class="message">-->
+      <!--<div class="message-username"> User </div>-->
+      <!--<div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>-->
+    <!--</div>-->
+    <!--<div class="message">-->
+      <!--<div class="message-username"> User </div>-->
+      <!--<div class="message-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien nisl, efficitur eget congue semper, condimentum ut dui. Ut massa ligula, vulputate sed maximus ut, ultrices quis neque. Maecenas lectus ex, placerat non sapien a, bibendum ornare justo. Aliquam eget quam accumsan, dignissim sapien at, posuere elit. Nulla in metus ullamcorper, molestie erat sed, luctus mauris. Vivamus finibus ante elit, vitae consectetur nunc porttitor ut. Maecenas at ligula est.</div>-->
+    <!--</div>-->
+    <!--&lt;!&ndash;<div style="display: flex; margin: 3em;">&ndash;&gt;-->
+    <!--&lt;!&ndash;<form>&ndash;&gt;-->
+    <!--&lt;!&ndash;<input type="text" />&ndash;&gt;-->
+    <!--&lt;!&ndash;</form>&ndash;&gt;-->
+    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+  <!--</main>-->
+  <!--<aside>aside</aside>-->
+<!--</div>-->
+
+<!--<footer>-->
+  <!--footer-->
+<!--</footer>-->
