Билд завелся, но пока без сокетов. Без билда всё работает.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="ru-ru"><head><link rel="icon" href="/favicon.2e70f008.png" type="image/png"><script src="https://unpkg.com/react@15/dist/react.js"></script><script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script><link href="/main.467eb14b.chunk.456175dc.css" rel="stylesheet"><script src="/main.467eb14b.chunk.456175dc.js"></script></head><body><div id="main-div"></div><script>function _typeof(obj) { if (typeof Symbol === "function" && typeof Symbol.iterator === "symbol") { _typeof = function _typeof(obj) { return typeof obj; }; } else { _typeof = function _typeof(obj) { return obj && typeof Symbol === "function" && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }; } return _typeof(obj); }
+<!doctype html><html lang="ru-ru"><head><link rel="icon" href="favicon.2e70f008.png" type="image/png"><script src="https://unpkg.com/react@15/dist/react.js"></script><script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script><link href="main.467eb14b.chunk.456175dc.css" rel="stylesheet"><script src="main.467eb14b.chunk.456175dc.js"></script></head><body><div id="main-div"></div><script>function _typeof(obj) { if (typeof Symbol === "function" && typeof Symbol.iterator === "symbol") { _typeof = function _typeof(obj) { return typeof obj; }; } else { _typeof = function _typeof(obj) { return obj && typeof Symbol === "function" && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }; } return _typeof(obj); }
 
 !function (l) {
   function e(e) {
@@ -90,4 +90,4 @@
 
   var s = n;
   a();
-}([]);</script><script src="/2.2ce55b12.chunk.28bb77b6.js"></script><script src="/main.884fecb4.chunk.257a4d0f.js"></script></body></html>
+}([]);</script><script src="2.2ce55b12.chunk.28bb77b6.js"></script><script src="main.884fecb4.chunk.257a4d0f.js"></script></body></html>
